modified loss and test

--- a/training.ipynb
+++ b/training.ipynb
@@ -298,28 +298,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9c73f2ba-b3a5-465a-bb98-411ae8cd1202",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([64, 128, 16, 16, 16])\n"
+     "ename": "ValueError",
+     "evalue": "Using a target size (torch.Size([16, 2])) that is different to the input size (torch.Size([16])) is deprecated. Please ensure they have the same size.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m b_one_hot \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mone_hot(b\u001b[38;5;241m.\u001b[39mto(torch\u001b[38;5;241m.\u001b[39mint64), num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)  \u001b[38;5;66;03m# Assuming 2 classes, change num_classes accordingly\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Calculate cross-entropy loss\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbinary_cross_entropy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msigmoid\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb_one_hot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss\u001b[38;5;241m.\u001b[39mitem())\n",
+      "File \u001b[1;32mD:\\Python\\Python310\\lib\\site-packages\\torch\\nn\\functional.py:3089\u001b[0m, in \u001b[0;36mbinary_cross_entropy\u001b[1;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[0;32m   3087\u001b[0m     reduction_enum \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mget_enum(reduction)\n\u001b[0;32m   3088\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m target\u001b[38;5;241m.\u001b[39msize() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msize():\n\u001b[1;32m-> 3089\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   3090\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing a target size (\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m) that is different to the input size (\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m) is deprecated. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   3091\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease ensure they have the same size.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(target\u001b[38;5;241m.\u001b[39msize(), \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msize())\n\u001b[0;32m   3092\u001b[0m     )\n\u001b[0;32m   3094\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   3095\u001b[0m     new_size \u001b[38;5;241m=\u001b[39m _infer_size(target\u001b[38;5;241m.\u001b[39msize(), weight\u001b[38;5;241m.\u001b[39msize())\n",
+      "\u001b[1;31mValueError\u001b[0m: Using a target size (torch.Size([16, 2])) that is different to the input size (torch.Size([16])) is deprecated. Please ensure they have the same size."
      ]
     }
    ],
    "source": [
     "import torch\n",
+    "import torch.nn.functional as F\n",
     "\n",
-    "# Create a tensor with shape [1, 64, 32]\n",
-    "tensor = torch.randn(64, 256, 8, 8, 8)\n",
+    "# Define tensor a\n",
+    "a = torch.tensor([0.4835, 0.5407, 0.4840, 0.5245, 0.5569, 0.6447, 0.5125, 0.4295, 0.5018,\n",
+    "        0.6360, 0.5395, 0.5377, 0.5086, 0.5101, 0.4061, 0.5847])\n",
     "\n",
-    "# Transpose the tensor to shape [64, 1, 32]\n",
-    "tensor = nn.ConvTranspose3d(256, 128, 4, 2, 1)(tensor)\n",
+    "# Define tensor b\n",
+    "b = torch.zeros(16)  # Create a tensor of zeros with dimension 16\n",
     "\n",
-    "print(tensor.shape) "
+    "# Convert tensor b to one-hot encoding\n",
+    "b_one_hot = F.one_hot(b.to(torch.int64), num_classes=2)  # Assuming 2 classes, change num_classes accordingly\n",
+    "\n",
+    "# Calculate cross-entropy loss\n",
+    "loss = F.binary_cross_entropy(torch.sigmoid(a), b_one_hot.float())\n",
+    "\n",
+    "print(loss.item())\n"
    ]
   },
   {
